public/stylesheets/visualization.css
.subunit-boundary {
  fill: none;
  stroke: #777;
  stroke-dasharray: 2,2;
  stroke-linejoin: round;
}

#datapoint-list {
   font-size: 13px;
   line-height: 1.5em;
   width: 396px;
   margin-right: 15px;
}
#top {
  float: left;
}
#lists {
   white-space: nowrap;
   float: left;
}
#tag-list {
  float: left;
  width:185px;
  font-size: 13px;
  white-space: normal;
  margin-right: 5px;
}
#datapoint-list {
  float: left;
}

#datapoint-list .serialnumber{
	width: 25px;
  display: inline-block;
  vertical-align: top;
  padding:2px;

}

#datapoint-list .date {
  width: 85px;
  display: inline-block;
  vertical-align: top;
  padding:2px;
}

#datapoint-list .stage{
	width: 95px;
  display: inline-block;
  vertical-align: top;
  padding:2px;
}




#datapoint-list .title{
  width: 170px;
  display: inline-block;
  vertical-align: top;
  padding:2px;
}

#datapoint-list .datapoint {
  white-space: normal;
  vertical-align: top;
  margin-bottom: 1px;
  display: block;
  background: #eee;
  padding: 1.5px;
}
#mapcontainer .datapointTitle  {
  font-weight:bold;
  margin-bottom: 1px;
  padding: 3px;
  font-size: 13px;
  vertical-align: top;
}
#datapoint-list .datapointTitle {
  font-weight:bold;
  white-space: normal;
  margin-bottom: 1px;
  padding: 1.5px;
}
.popover-content{
  font-weight: normal;
}
.popover-link {
  color: black;
}
span.datapointsource {
  display: block;
}

.background.bar {
  fill: #ccc;
}

.foreground.bar {
  fill: steelblue;
}
.axis path, .axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.axis text {
  font: 10px sans-serif;
}
.chart-label {
  font: 12px sans-serif;
  font-weight:bold;
}

.brush rect.extent {
  fill: steelblue;
  fill-opacity: .125;
}

.brush .resize path {
  fill: #eee;
  stroke: #666;
}

#charts {
  padding: 0px 0px 15px 0px;
  float: left;
}
#totals {
  float:left;
  margin-right:10px;
  width:162px;
}
#stagedropdown{
  width:170px;
}
#map {
  width:535px;
  height: 500px;
}
#mapcontainer {
  overflow: auto;
}
.leaflet-clickable:hover{
  fill-opacity: .8;
  stroke: red;
  fill: red;
}
.subunit {
  fill-opacity: .2;
  stroke: #fff;
  stroke-width: 1.5px;
}

.chart {
  display: inline-block;
  height: 121px;
  margin-bottom: 20px;
}
.info {
    padding: 6px 8px;
    font: 14px/16px Arial, Helvetica, sans-serif;
    background: white;
    background: rgba(255,255,255,0.8);
    box-shadow: 0 0 15px rgba(0,0,0,0.2);
    border-radius: 5px;
}
.info h4 {
    margin: 0 0 5px;
    color: #777;
}

